IDEA-330211 UIThemeLookAndFeelInfo interface should not extend implementation class (Swing)
GitOrigin-RevId: 5303eb844123406a2c629d0cd3cfd5b771205a93